<?xml version="1.0"?>
<package format="2">
  <name>eigen_example</name>
  <version>0.0.1</version>
  <description>The eigen_example package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>

